<resources>
    <string name="app_name">RGBApplication</string>

    <!--MENAMBAHKAN DATA STRING UNTUK RGB APP-->
    <string name="color_creator_title">CREATE AN RGB COLOR</string>
    <string name="color_creator_description">Add two hexadecimal character between 0-9, A-F or a-f without the \'#\' for each channel</string>
    <string name="red_channel">Red Channel</string>
    <string name="green_channel">Green Channel</string>
    <string name="blue_channel">Blue Channel</string>
    <string name="color_creator_button_text">Create RGB Color</string>
    <string name="color_created_display_panel">Created color display panel</string>
    <string name="invalid_characters_found">Invalid Characters Found</string>
    <string name="digits">ABCDEFabcdef123456789</string>
</resources>