<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/color_creator_layout_margin"
    tools:context=".RGBApplication">

    <TextView
        android:id="@+id/title"
        style="@style/color_creator_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/color_creator_layout_margin"
        android:gravity="center"
        android:text="@string/color_creator_title"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_creator_description"
        android:layout_margin="@dimen/color_creator_layout_margin"
        style="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/red_channel_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/color_creator_layout_margin"
        android:hint="@string/red_channel"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/red_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/digits"
            android:inputType="textCapCharacters"
            android:maxLength="2"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/green_channel_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/color_creator_layout_margin"
        android:hint="@string/green_channel"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/red_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/green_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/digits"
            android:inputType="textCapCharacters"
            android:maxLength="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blue_channel_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/color_creator_layout_margin"
        android:hint="@string/blue_channel"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/green_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blue_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/digits"
            android:inputType="textCapCharacters"
            android:maxLength="2"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_creator_button_text"
        android:gravity="center"
        android:layout_margin="@dimen/color_creator_layout_margin"
        app:layout_constraintTop_toBottomOf="@id/blue_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_view_rgb_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/color_creator_display_panel"
        android:text="@string/color_created_display_panel"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_margin="@dimen/color_creator_layout_margin"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/material_button"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>